# solis-hours-control

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yml
