[tool.poetry]
name = "solis-hours-control"
version = "0.1.0"
description = "This project is going to control the worked hours for different departments"
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "solis_hours_control"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
